--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h3 class="resume-title">Cover Letter</h3>
                     <div class="resume-item pb-0">
                         <h4>Adrian Sapien</h4>
-                        <p><em>A brief description of yourself and what you want to get out of your job. Talk about strengths and experience</em></p>
+                        <p><em>I'm an upcoming Computer Programmer/Web Designer. I have a huge passion for coding and I have knowledge in several computer languages. (See Above)</em></p>
                         <p>
                             <ul>
                                 <li>8843 W Laurel Ln</li>
@@ -106,17 +106,10 @@
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>What degree you graduated with</h4>
-                        <h5>Graduation Year</h5>
-                        <p><em>Where you graduated from</em></p>
-                        <p>Awards, Honors, General Information about your time</p>
-                    </div>
-
-                    <div class="resume-item">
-                        <h4>What degree you graduated with</h4>
-                        <h5>Graduation Year</h5>
-                        <p><em>Where you graduated from</em></p>
-                        <p>Awards, Honors, General Information about your time</p>
+                        <h4>High School Graduate</h4>
+                        <h5>2021</h5>
+                        <p><em>Raymond S. Kellis High School</em></p>
+                        <p>Experience with several computer courses through out High School years, such as Computer Programming and Game Design.</p>
                     </div>
                     <!-- Add more as needed -->
 
@@ -125,25 +118,30 @@
                 </div>
 
                 <div class="col-lg-6">
-
-                    <h3 class="resume-title">Certifications</h3>
-                    <div class="resume-item">
-                        <h4>Name of the Cert.</h4>
-                        <h5>Year Obtained</h5>
-                        <p><em>Company that provides Cert</em></p>
+                    <div class="pictures">
+                    <div class="picture1">
+                        <img src="capstone.png" width="100%" alt="">
+                    <h3><i><a href="wawaw.html">Capstone Weather Project</a></i></h3>
                     </div>
-                <!-- Add more as needed -->
-                <h3 class="resume-title">Professional Experience</h3>
-                <div class="resume-item">
-                    <h4>Your position at the company</h4>
-                    <h5>Years you worked there</h5>
-                    <p><em>Company and Address</em></p> <!-- West-Mec, Glendale, AZ -->
-                    <ul>
-                        <li>Key Roles</li>
-                        <li>Or Responsibilities</li>
-                        <li>Or Related Skills</li>
-                    </ul>
+
+                    <div class="picture2">
+                        <img src="Cat.png" width="100%" alt="">
+                    <h3><i><a href="wawaw.html">Cat Families</a></i></h3>
+                    </div>
+
+                    <div class="picture3">
+                        <img src="Nixon.png" width="100%" alt="">
+                    <h3><i><a href="wawaw.html">Richard Nixon Voting</a></i></h3>
+                    </div>
+
+                    <div class="picture4">
+                        <img src="TurnRPG.png" width="100%" alt="">
+                    <h3><i><a href="wawaw.html">Turn Based RPG (unfinished)</a></i></h3>
+                    </div>
+                    </div>
                 </div>
+                <!-- Add more as needed -->
+            
                 <!-- Add more as needed -->
                 </div>
 
