--- a/index.html
+++ b/index.html
@@ -121,22 +121,22 @@
                     <div class="pictures">
                     <div class="picture1">
                         <img src="capstone.png" width="100%" alt="">
-                    <h3><i><a href="wawaw.html">Capstone Weather Project</a></i></h3>
+                    <h3><i><a href="https://github.com/Nick-Sachau/capstone">Capstone Weather Project</a></i></h3>
                     </div>
 
                     <div class="picture2">
                         <img src="Cat.png" width="100%" alt="">
-                    <h3><i><a href="wawaw.html">Cat Families</a></i></h3>
+                    <h3><i><a href="https://gu1nea-as.github.io/CatFamilies/">Cat Families</a></i></h3>
                     </div>
 
                     <div class="picture3">
                         <img src="Nixon.png" width="100%" alt="">
-                    <h3><i><a href="wawaw.html">Richard Nixon Voting</a></i></h3>
+                    <h3><i><a href="https://gu1nea-as.github.io/VoteForNixon/">Richard Nixon Voting</a></i></h3>
                     </div>
 
                     <div class="picture4">
                         <img src="TurnRPG.png" width="100%" alt="">
-                    <h3><i><a href="wawaw.html">Turn Based RPG (unfinished)</a></i></h3>
+                    <h3><i><a href="https://gu1nea-as.github.io/TurnBasedRPG/">Turn Based RPG (unfinished)</a></i></h3>
                     </div>
                     </div>
                 </div>
